--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ services:
 
 before_install:
 - docker pull natemellendorf/configpy-node
-- docker run --name configpy-node -d -p 9000:9000 --network production configpy-node --rm natemellendorf/configpy-node test1 SecRet 127.0.0.1
+- docker network create production
+- docker run --name configpy-node -d -p 9000:9000 --network production --rm natemellendorf/configpy-node test1 SecRet 127.0.0.1
 - docker ps -a
